Fix java doc plugin configuration.